Fix: Explicitly allow all origins in CORS

--- a/.env
+++ b/.env
@@ -16,6 +16,11 @@ VITE_R2_BUCKET_NAME=lecturenap
 VITE_R2_PUBLIC_URL=https://pub-d805c07fd21c41f29c42fc3f342de58e.r2.dev
 VITE_AI_WORKER_URL=https://lecturesnap-worker.lecturesnap-ai-worker.workers.dev
 
+# Backend URL (Railway Public URL)
+# NOTE: Replace 'http://localhost:3000' with your PUBLIC Railway URL (e.g. https://ytnote-production.up.railway.app)
+# Do NOT use 'internal' URLs here.
+VITE_BACKEND_URL=https://ytnote-production.up.railway.app
+
 # AI Configuration
 GEMINI_API_KEY=AIzaSyCl4cJhwB12wLyPjMDFmNAG2uo3yISWtXE
 OPENROUTER_API_KEY=sk-OR-5733298100433649-5733298100433649
