Build: Optimize Dockerfile for Railway with Playwright Chromium

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,16 +1,27 @@
+# Use official Playwright image
 FROM mcr.microsoft.com/playwright:v1.41.2-jammy
 
+# Set working directory
 WORKDIR /app
 
-COPY package.json ./
-# Install deps (including aws-sdk which we just added)
+# Copy package files
+COPY package*.json ./
+
+# Install dependencies
 RUN npm install
 
+# Install ONLY chromium to save space and memory
+RUN npx playwright install --with-deps chromium
+
+# Copy application code
 COPY . .
 
-# Railway provides PORT env var, we must listen on it.
+# Set environment variables
+ENV NODE_ENV=production
 ENV PORT=3000
 
+# Expose the port
 EXPOSE 3000
 
+# Start the application
 CMD ["node", "index.js"]
